node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testnode-deployment
  labels:
    app: testnode
spec:
  replicas: 2
  selector:
    matchLabels:
      app: testnode
  template:
    metadata:
      labels:
        app: testnode
    spec:
      containers:
        - name: testnode
          image: node_image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
