node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testnode-service
spec:
  selector:
    app: testnode
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
